# plotly-formatter

./: LICENSE  README.md  pyproject.toml
plotly_formatter/: __init__.py  formatter.py
