[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotly-formatter"
version = "0.1.0"
description = "A utility class for standardizing Plotly figure styling."

readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "plotly>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/Boerger22/plotly-formatter"
